gccida/c0/genrtl_case_label
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/genrtl_case_label/src/c-semantics.c:1139:7: error: use of undeclared identifier 'genrtl_case_label_explained'
if ( !genrtl_case_label_explained ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/genrtl_case_label/src/c-semantics.c:1142:1: error: use of undeclared identifier 'genrtl_case_label_explained'
genrtl_case_label_explained = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/genrtl_case_label/src/obj/c-semantics.o] Error 1
